solve styles problems in header, and overflow in modal window

--- a/_src/assets/scss/layout/_header.scss
+++ b/_src/assets/scss/layout/_header.scss
@@ -1,5 +1,5 @@
 .header--container {
-  height: 90vh;
+  height: 110vh;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
