--- a/_src/assets/scss/layout/_therapy.scss
+++ b/_src/assets/scss/layout/_therapy.scss
@@ -35,7 +35,7 @@
   z-index: 999;
   padding: 15px;
   left: 30%;
-  top: 20%;
+  top: 10%;
   width: 600px;
   height: auto;
   overflow: auto;
